/*
 * lucene_partitioning.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2023 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.lucene;

option java_outer_classname = "LucenePartitionInfoProto";

message LucenePartitionInfo {
  required uint32 id = 1;
  required uint64 from = 2;
  required uint64 to = 3;
  required uint32 count = 4;
}
